// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`manual-routes - Manual API definitions with overrides > matches snapshot 1`] = `
{
  "info": {
    "description": "Manual route definition pattern test",
    "title": "Manual Routes Test API",
    "version": "1.0.0",
  },
  "openapi": "3.0.0",
  "paths": {
    "/user": {
      "get": {
        "responses": {
          "default": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "message": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "message",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Default fallback response",
          },
        },
        "summary": "Auto-generated GET /user",
        "tags": [
          "UserList",
        ],
      },
    },
    "/user/{id}": {
      "get": {
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "default": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "userId": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "userId",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Default fallback response",
          },
        },
        "summary": "Auto-generated GET /user/{id}",
        "tags": [
          "User Routes",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "http://localhost:3000/api",
    },
  ],
  "tags": [
    {
      "name": "User Routes",
    },
  ],
}
`;

exports[`simple-router - Non-grouped basic Hono app > matches complete simple router structure snapshot 1`] = `
{
  "info": {
    "description": "Simple non-grouped router pattern test",
    "title": "Simple Router Test API",
    "version": "1.0.0",
  },
  "openapi": "3.0.0",
  "paths": {
    "/api/users": {
      "get": {
        "responses": {
          "default": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "users": {
                      "items": {},
                      "type": "array",
                    },
                  },
                  "required": [
                    "users",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Default fallback response",
          },
        },
        "summary": "Auto-generated GET /api/users",
        "tags": [
          "Simple Router",
        ],
      },
      "post": {
        "responses": {
          "201": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "created": {},
                  },
                  "required": [
                    "created",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Status 201",
          },
        },
        "summary": "Auto-generated POST /api/users",
        "tags": [
          "Simple Router",
        ],
      },
    },
    "/api/users/{id}": {
      "delete": {
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "default": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "deleted": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "deleted",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Default fallback response",
          },
        },
        "summary": "Auto-generated DELETE /api/users/{id}",
        "tags": [
          "Simple Router",
        ],
      },
      "get": {
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "default": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "user": {
                      "properties": {
                        "id": {
                          "type": "string",
                        },
                      },
                      "required": [
                        "id",
                      ],
                      "type": "object",
                    },
                  },
                  "required": [
                    "user",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Default fallback response",
          },
        },
        "summary": "Auto-generated GET /api/users/{id}",
        "tags": [
          "Simple Router",
        ],
      },
      "put": {
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "default": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "updated": {},
                  },
                  "required": [
                    "updated",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Default fallback response",
          },
        },
        "summary": "Auto-generated PUT /api/users/{id}",
        "tags": [
          "Simple Router",
        ],
      },
    },
  },
  "tags": [
    {
      "name": "Simple Router",
    },
  ],
}
`;
